--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -77,9 +77,7 @@
         background-color: grey;
         width: 480px;
         height: 480px;
-
     }
-
 
     &__notes {
         width: max-content;
@@ -100,7 +98,7 @@
             padding: 8px;
             gap: 8px;
             width: 659px;
-            height: 135px;
+            min-height: 135px;
             background: #FAFAFA;
             box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
             border-radius: 12px;
