--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -55,7 +55,6 @@
             font-weight: 400;
             line-height: 16px;
             text-align: left;
-
         }
 
         &-month {
@@ -64,7 +63,6 @@
             font-weight: 500;
             line-height: 16px;
             text-align: left;
-
         }
 
         &-img {
@@ -80,29 +78,29 @@
     }
 
     &__notes {
-        width: max-content;
+        width: 660px;
         height: 582px;
         display: block;
         gap: 20px;
         border-radius: 16px;
-        align-items:center;
+        align-items: center;
         justify-content: space-between;
         text-align: left;
         padding: 10px;
         border: 1px solid rgba(193, 189, 189, 0.5);
         overflow-y: auto;
+        position: relative;
 
         &-area {
             margin: 20px 0px;
             display: block;
             padding: 8px;
             gap: 8px;
-            width: 659px;
+            width: 660px;
             min-height: 135px;
             background: #FAFAFA;
             box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
             border-radius: 12px;
-
 
             p {
                 margin: 10px;
@@ -110,12 +108,26 @@
         }
 
         &-title {
-    
             font-size: 14px;
             font-weight: 500;
             line-height: 20px;
             letter-spacing: 0.10000000149011612px;
+        }
 
+        &-empty {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+            font-weight: 500;
+            color: #777;
+            height: 100%;
+            width: 100%;
+            text-align: center;
+        }
+
+        .color{
+            color: black;
         }
     }
 
