--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -78,7 +78,7 @@
     }
 
     &__notes {
-        width: 660px;
+        min-width: 676px;
         height: 582px;
         display: block;
         gap: 20px;
