--- a/src/Pages/Footer/footer-scss/_footer.scss
+++ b/src/Pages/Footer/footer-scss/_footer.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between; 
     align-items: center;
+    bottom: 0; 
     width: 100%; 
     z-index: 1000; 
 
