--- a/src/Pages/Footer/footer-scss/_footer.scss
+++ b/src/Pages/Footer/footer-scss/_footer.scss
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: space-between; 
     align-items: center;
+    // position: fixed; 
+    bottom: 0; 
     width: 100%; 
     z-index: 1000; 
 
@@ -45,10 +47,9 @@
             font-size: 20px;
             color: rgb(0, 0, 0);
         }
-        
+
         &-images {
             display: flex;
-            gap: 10px;
             img {
                 width: 100px; 
             }
@@ -68,7 +69,7 @@
             color: rgb(0, 0, 0);
             margin-bottom: 5px;
         }
-        
+
         &-phone, &-mail {
             display: flex;
             align-items: center;
