kontroller ve düzenlemeler yapıldı

--- a/src/Pages/Footer/footer-scss/_footer.scss
+++ b/src/Pages/Footer/footer-scss/_footer.scss
@@ -79,7 +79,7 @@
             margin: 2px 0;
 
             svg {
-                margin-right: 5px; // İkon ile metin arasında boşluk bırakır
+                margin-right: 5px;
             }
         }
     }
