--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -31,7 +31,7 @@ padding: 150px;
   border-radius:30px;
   overflow: hidden;
   background: linear-gradient(to right, #6A7FC1, #F3AFE5);
-  width: 300px; /* Genişlik değerini arttırın */
+  width: 300px; 
   height: 30px;
   margin-bottom: 30px;
   background-size: 100% 100%;
@@ -61,7 +61,7 @@ padding: 150px;
   transform: translate(-50%, -50%);
   font-size: 18px;
   color: rgb(1, 1, 1);
-  text-align: center; // Yazıyı ortala
+  text-align: center; 
 }
 
 .note-item {
@@ -90,19 +90,19 @@ padding: 150px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(193, 190, 190, 0.879); /* Modal arka planı için yarı saydam siyah bir renk */
-  z-index: 9999; /* Modalın diğer öğelerin üstünde olmasını sağlar */
+  background-color: rgba(193, 190, 190, 0.879);
+  z-index: 9999; 
 }
 
 .modal-content {
   background-color: white;
-  border-radius: 20px; /* Border radius değerini arttırdık */
+  border-radius: 20px; 
   padding: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Hafif bir gölge efekti */
-  max-width: 80%; /* Modalın maksimum genişliği */
-  max-height: 80%; /* Modalın maksimum yüksekliği */
-  overflow-y: auto; /* İçeriği aşan durumlarda dikey kaydırma çubuğu göster */
-  border: none; /* Border rengini kaldırdık */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  max-width: 80%;
+  max-height: 80%; 
+  overflow-y: auto; 
+  border: none; 
 }
 
 .modal-header {
