--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -43,7 +43,7 @@ padding: 150px;
   top: -50px;
   left: 80px; 
   background-color: white;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccce0;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
