galey detay sayfası bitti

--- a/src/Pages/GalleryPage/gallery-scss/_gallery.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery.scss
@@ -60,6 +60,7 @@
             width: 150px;
             height: 150px;
             background-color: rgba(241, 240, 240, 1);
+            object-fit :  cover ;
 
         }
 
