--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -55,6 +55,7 @@
             font-weight: 400;
             line-height: 16px;
             text-align: left;
+
         }
 
         &-month {
@@ -63,6 +64,7 @@
             font-weight: 500;
             line-height: 16px;
             text-align: left;
+
         }
 
         &-img {
@@ -72,13 +74,16 @@
     }
 
     &__img {
-        background-color: grey;
-        width: 480px;
-        height: 480px;
+
+        img {
+            width: 448px;
+            height: 448px;
+        }
+
     }
 
     &__notes {
-        min-width: 676px;
+        width: max-content;
         height: 582px;
         display: block;
         gap: 20px;
@@ -86,42 +91,21 @@
         align-items: center;
         justify-content: space-between;
         text-align: left;
-        padding: 0px 10px;
+        padding: 10px;
         border: 1px solid rgba(193, 189, 189, 0.5);
-        overflow-y: scroll;
-        padding-right: 20px;
-
-        ::-webkit-scrollbar {
-            width: 15px;
-            background: #FAFAFA;
-            border: 3px solid #6A7FC1;
-            border-radius: 5px;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: #f1f1f1;
-
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background-color: #6A7FC1; 
-            border-radius: 5px;
-            height: 5px;
-        }
-
-        scrollbar-color: #6A7FC1 #FAFAFA; 
-        scrollbar-width: thin;
+        overflow-y: auto;
 
         &-area {
             margin: 20px 0px;
             display: block;
             padding: 8px;
             gap: 8px;
-            width: 660px;
+            width: 659px;
             min-height: 135px;
             background: #FAFAFA;
             box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
             border-radius: 12px;
+
 
             p {
                 margin: 10px;
@@ -129,26 +113,12 @@
         }
 
         &-title {
+
             font-size: 14px;
             font-weight: 500;
             line-height: 20px;
             letter-spacing: 0.10000000149011612px;
-        }
 
-        &-empty {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 18px;
-            font-weight: 500;
-            color: #777;
-            height: 100%;
-            width: 100%;
-            text-align: center;
-        }
-
-        .color {
-            color: black;
         }
     }
 
