--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -35,7 +35,7 @@ padding: 150px;
   width: 300px; 
   height: 30px;
   margin-bottom: 30px;
-  background-size: 100% 100%; /* Arkaplanın boyutunu genişliği kadar ayarlayın */
+  background-size: 100% 100%; 
 }
 
 .note-list {
@@ -61,7 +61,7 @@ padding: 150px;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 18px;
-  color: rgb(189, 3, 3);
+  color: rgb(0, 0, 0);
   text-align: center; // Yazıyı ortala
 }
 
