galary detail note sayfası

--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -83,7 +83,7 @@
     }
 
     &__notes {
-        width: max-content;
+        min-width: 659px;
         height: 582px;
         display: block;
         gap: 20px;
