--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -55,6 +55,7 @@
             font-weight: 400;
             line-height: 16px;
             text-align: left;
+
         }
 
         &-month {
@@ -63,6 +64,7 @@
             font-weight: 500;
             line-height: 16px;
             text-align: left;
+
         }
 
         &-img {
@@ -72,13 +74,16 @@
     }
 
     &__img {
-        background-color: grey;
-        width: 480px;
-        height: 480px;
+
+        img {
+            width: 448px;
+            height: 448px;
+        }
+
     }
 
     &__notes {
-        min-width: 676px;
+        min-width: 659px;
         height: 582px;
         display: block;
         gap: 20px;
@@ -89,18 +94,18 @@
         padding: 10px;
         border: 1px solid rgba(193, 189, 189, 0.5);
         overflow-y: auto;
-        position: relative;
 
         &-area {
             margin: 20px 0px;
             display: block;
             padding: 8px;
             gap: 8px;
-            width: 660px;
+            width: 659px;
             min-height: 135px;
             background: #FAFAFA;
             box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
             border-radius: 12px;
+
 
             p {
                 margin: 10px;
@@ -108,26 +113,12 @@
         }
 
         &-title {
+
             font-size: 14px;
             font-weight: 500;
             line-height: 20px;
             letter-spacing: 0.10000000149011612px;
-        }
 
-        &-empty {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 18px;
-            font-weight: 500;
-            color: #777;
-            height: 100%;
-            width: 100%;
-            text-align: center;
-        }
-
-        .color{
-            color: black;
         }
     }
 
