--- a/src/Pages/Navbar/navbar-scss/_navbar.scss
+++ b/src/Pages/Navbar/navbar-scss/_navbar.scss
@@ -130,3 +130,81 @@
     letter-spacing: 0.10000000149011612px;
     cursor: pointer;
 }
+
+
+.profile {
+    
+    // height: 412px;
+    display: grid;
+    padding: 20px;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    &__avatar {
+
+        p {
+            font-family: Roboto;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0.5px;
+        }
+
+        &-img{
+            width: 140px;
+            height: 140px;
+        }
+
+    }
+
+    &__body {
+        width: 332px;
+        background: rgba(249, 249, 249, 1);
+        padding: 15px;
+        display: grid;
+        gap: 5px;
+        text-align: left;
+        box-shadow: 0px 0.5px 0.5px rgba(0, 0, 0, 0.3), 0px 0.5px 0.5px 1px rgba(0, 0, 0, 0.15);
+        border-radius: 12px;
+
+        h2 {
+            margin: 0px;
+        }
+
+        p {
+            margin: 0px;
+        }
+
+    }
+
+    &__logout {
+        justify-content: center;
+        align-items: center;
+        padding: 10px 24px;
+        gap: 8px;
+        color: rgba(90, 108, 165, 1);
+        border: 1px solid #79747E;
+        border-radius: 100px;
+        cursor: pointer;
+        font-family: Roboto;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 20px;
+        letter-spacing: 0.10000000149011612px;
+        text-align: center;
+
+
+
+        :hover {
+            background-color: #5A6CA5;
+            color: #FAFAFA;
+        }
+
+    }
+
+
+
+
+}
