--- a/src/Pages/NotePage/note-scss/_notedetail.scss
+++ b/src/Pages/NotePage/note-scss/_notedetail.scss
@@ -116,6 +116,13 @@
             letter-spacing: 0.10000000149011612px;
 
         }
+
+        &-nodata{
+            justify-content: center;
+            text-align: center;
+            
+        }
+
     }
 
 
