--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -1,11 +1,10 @@
-
 .note__container {
   width: max-content;
   height: max-content;
   margin: 138px 0px 100px 0px;
   display: block;
   gap: 20px;
- 
+
 
 
   .note__area {
@@ -25,13 +24,14 @@
       border-radius: 30px;
       background: linear-gradient(to right, #6A7FC1, #F3AFE5);
       width: 400px;
-      p{
+
+      p {
         margin: 5px;
       }
 
-      
+
     }
-  
+
 
 
     .note__add {
@@ -58,6 +58,22 @@
       .add__button {
         text-align: right;
         height: auto;
+
+
+        &-type {
+          border: 1px solid rgba(121, 116, 126, 1);
+          color: rgba(90, 108, 165, 1);
+          border-radius: 100px;
+          width: 92px;
+          height:40px;
+          font-family: Roboto;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 20px;
+          letter-spacing: 0.10000000149011612px;
+          text-align: center;
+
+        }
       }
 
 
@@ -76,39 +92,47 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(193, 190, 190, 0.879); /* Modal arka planı için yarı saydam siyah bir renk */
-    z-index: 9999; /* Modalın diğer öğelerin üstünde olmasını sağlar */
+    background-color: rgba(193, 190, 190, 0.879);
+    /* Modal arka planı için yarı saydam siyah bir renk */
+    z-index: 9999;
+    /* Modalın diğer öğelerin üstünde olmasını sağlar */
   }
-  
+
   .modal-content {
     background-color: white;
-    border-radius: 20px; /* Border radius değerini arttırdık */
+    border-radius: 20px;
+    /* Border radius değerini arttırdık */
     padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Hafif bir gölge efekti */
-    max-width: 80%; /* Modalın maksimum genişliği */
-    max-height: 80%; /* Modalın maksimum yüksekliği */
-    overflow-y: auto; /* İçeriği aşan durumlarda dikey kaydırma çubuğu göster */
-    border: none; /* Border rengini kaldırdık */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* Hafif bir gölge efekti */
+    max-width: 80%;
+    /* Modalın maksimum genişliği */
+    max-height: 80%;
+    /* Modalın maksimum yüksekliği */
+    overflow-y: auto;
+    /* İçeriği aşan durumlarda dikey kaydırma çubuğu göster */
+    border: none;
+    /* Border rengini kaldırdık */
   }
-  
+
   .modal-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
   }
-  
+
   .modal-title {
     font-size: 1.2rem;
     font-weight: bold;
   }
-  
+
   .modal-close-button {
     cursor: pointer;
     color: #777;
     transition: color 0.3s ease;
   }
-  
+
   .modal-close-button:hover {
     color: #333;
   }
