--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -94,7 +94,7 @@
 //         padding: 10px;
 //         border: 1px solid rgba(193, 189, 189, 0.5);
 //         overflow-y: auto;
-   
+
 
 //         &-area {
 //             margin: 20px 0px;
@@ -124,7 +124,7 @@
 
 //         &-nodata{
 //             text-align: center;
-            
+
 //         }
 //     }
 
@@ -202,13 +202,68 @@
         &-img {
             width: 448px;
             height: 448px;
+
+
+        }
+    }
+
+
+
+
+    @-webkit-keyframes rotating {
+        from {
+            -webkit-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+        }
+
+        to {
+            -webkit-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+    }
+
+    @keyframes rotating {
+        from {
+            -ms-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -webkit-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+        }
+
+        to {
+            -ms-transform: rotate(360deg);
+            -moz-transform: rotate(360deg);
+            -webkit-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            transform: rotate(360deg);
         }
     }
 
     &__img {
-        background-color: grey;
+        background-color: transparent;
         width: 480px;
         height: 480px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    &__loading {
+        width: 480px;
+        height: 480px;
+        img{
+            -webkit-animation: rotating 2s linear infinite;
+            -moz-animation: rotating 2s linear infinite;
+            -ms-animation: rotating 2s linear infinite;
+            -o-animation: rotating 2s linear infinite;
+            animation: rotating 2s linear infinite;
+        }
+       
+
+
     }
 
     &__notes {
@@ -238,12 +293,12 @@
         }
 
         ::-webkit-scrollbar-thumb {
-            background-color: #6A7FC1; 
+            background-color: #6A7FC1;
             border-radius: 5px;
             height: 5px;
         }
 
-        scrollbar-color: #6A7FC1 #FAFAFA; 
+        scrollbar-color: #6A7FC1 #FAFAFA;
         scrollbar-width: thin;
 
         &-area {
