--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -6,8 +6,6 @@
   display: block;
   gap: 20px;
  
-
-
   .note__area {
     width: 480px;
     height: auto;
@@ -31,9 +29,6 @@
 
       
     }
-  
-
-
     .note__add {
 
       width: 400px;
@@ -66,7 +61,6 @@
 
   }
 
-
   .modal-container {
     display: flex;
     justify-content: center;
@@ -76,19 +70,19 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(193, 190, 190, 0.879); /* Modal arka planı için yarı saydam siyah bir renk */
-    z-index: 9999; /* Modalın diğer öğelerin üstünde olmasını sağlar */
+    background-color: rgba(193, 190, 190, 0.879); 
+    z-index: 9999; 
   }
   
   .modal-content {
     background-color: white;
-    border-radius: 20px; /* Border radius değerini arttırdık */
+    border-radius: 20px; 
     padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Hafif bir gölge efekti */
-    max-width: 80%; /* Modalın maksimum genişliği */
-    max-height: 80%; /* Modalın maksimum yüksekliği */
-    overflow-y: auto; /* İçeriği aşan durumlarda dikey kaydırma çubuğu göster */
-    border: none; /* Border rengini kaldırdık */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    max-width: 80%; 
+    max-height: 80%; 
+    overflow-y: auto; 
+    border: none; 
   }
   
   .modal-header {
