--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -14,6 +14,7 @@
     padding: 15px;
     display: grid;
     gap: 20px;
+    align-items: center;
 
     .summary-add-button {
       color: white;
@@ -23,7 +24,8 @@
       text-align: center;
       border-radius: 30px;
       background: linear-gradient(to right, #6A7FC1, #F3AFE5);
-      width: 400px;
+      width:95%;
+      padding: 5px 0px;
 
       p {
         margin: 5px;
