--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -52,7 +52,10 @@
         margin: 0px;
       }
 
-     
+      .add__button {
+        text-align: right;
+        height: auto;
+      }
 
 
     }
