--- a/src/Pages/NotePage/note-scss/_note.scss
+++ b/src/Pages/NotePage/note-scss/_note.scss
@@ -9,7 +9,7 @@
 
   .note__area {
     width: 480px;
-    height: auto;
+    height: 650px;
     border-radius: 16px;
     padding: 15px;
     display: grid;
