detail sayfası scss

--- a/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
+++ b/src/Pages/GalleryPage/gallery-scss/_gallery-detail.scss
@@ -262,6 +262,7 @@
         width: 480px;
         height: 480px;
         img{
+            margin: 140px;
             -webkit-animation: rotating 2s linear infinite;
             -moz-animation: rotating 2s linear infinite;
             -ms-animation: rotating 2s linear infinite;
