--- a/src/Pages/RegisterPage/register-scss/_register.scss
+++ b/src/Pages/RegisterPage/register-scss/_register.scss
@@ -6,6 +6,17 @@
     width: max-content;
     height: max-content;
     padding: 43px 78px;
+
+
+
+    .formyapısı{
+        min-height: 100%;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+    
+    }
+
 }
 
 .header {
@@ -208,3 +219,4 @@
 
 
 }
+
